<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.uni.hannover.hci.mi.team6.covidcheckin.bluetooth.BluetoothActivity">

    <item
        android:id="@+id/action_info"
        android:orderInCategory="300"
        android:title="@string/info"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="200"
        android:title="@string/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="300"
        android:title="@string/export"
        android:icon="@drawable/ic_export_save"
        app:showAsAction="always" />
</menu>
