<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".main.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/welcomeToApp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <TextView
                android:id="@+id/appNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/permissions_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/permissions_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/permissions_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/permissions_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notifications_permission_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_permission_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notifications_permission_description_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/notifications_permission_description" />

                <Button
                    android:id="@+id/notifications_button"
                    style="@android:style/Widget.Material.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/enable"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_permission_titlelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_permission_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/location_permission_description_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/location_permission_description" />

                <Button
                    android:id="@+id/location_button"
                    style="@android:style/Widget.Material.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/enable"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bluetooth_permission_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_permission_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bluetooth_permission_description_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/bluetooth_permission_description" />

                <Button
                    android:id="@+id/bluetooth_button"
                    style="@android:style/Widget.Material.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/enable"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications_permission_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_permission_title" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Switch" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
