<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".checkin.CheckinSuccessActivity">

    <ImageView
        android:id="@+id/iv_checkin_tick"
        android:layout_width="272dp"
        android:layout_height="161dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        tools:ignore="ContentDescription"
        android:src="@drawable/checkin_tick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/str_checkin_success"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:text="@string/str_tks_checkin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:id="@+id/tv_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_checkin_done" />
    </LinearLayout>

</LinearLayout>
