<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:alpha="0.5"
        android:id="@+id/floatingActionButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="160dp"
        android:clickable="true"
        android:contentDescription="@string/desc"
        android:focusable="true"
        android:src="@drawable/bluetooth_white"
        app:backgroundTint="@color/colorPrimary"
        app:fabCustomSize="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/animationInner"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="135dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animation_circle"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/animationOuter"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="110dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animation_circle"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tipp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/sucheAktivieren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationOuter" />

    <ImageView
        android:id="@+id/tippArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationOuter"
        app:srcCompat="@drawable/baseline_north_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>